--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.2.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>jp.te4a.spring.boot.myapp9</groupId>
+	<groupId>jp.te4a.spring.boot.myapp11</groupId>
 	<artifactId>mybootapp6</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mybootapp9</name>
+	<name>mybootapp11</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
@@ -51,6 +51,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+		<dependency>
+    		<groupId>jakarta.validation</groupId>
+    		<artifactId>jakarta.validation-api</artifactId>
+    		<version>3.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
